--- a/ccatcracker/templates/music/songs.html
+++ b/ccatcracker/templates/music/songs.html
@@ -75,7 +75,7 @@ form.example input[type=text] {
 
 				</p>
 			  <br> <br>
-			  <h4 style="color:white;">Your Search Song : </h4> <br>
+			  <h4 style="color: white;"> <strong>{{songs.0.song_names}} </strong></h4> <br>
               {% if songs %}
               {% for p in songs %} 
               <h5 style="color:white;">
