--- a/ccatcracker/templates/pages/ccee.html
+++ b/ccatcracker/templates/pages/ccee.html
@@ -8,7 +8,7 @@
       margin-bottom: 1em;
       margin-left: 0;
       margin-right: 0;
-      font-style: italic;
+      
       font-size: 15px;
       
     }
@@ -22,102 +22,169 @@
                 <a href="{% url 'index' %}">
                   <i class="fas fa-home"></i> Home</a>
               </li>
-              <li class="breadcrumb-item active"> About</li>
+              <li class="breadcrumb-item active"> CCEE</li>
             </ol>
           </nav>
         </div>
       </section>
     
-      <section id="about" class="py-4">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-8">
-              <h2>The Final Exam Conducted By Cdac </h2>
-              <p class="lead">Check Out the study Material We will update notes here soon.</p>
-             
-              <p class="mt-4">
-                Guys This is the exam on which your whole placement is depend . <br>
-                No matter in which college you studied whether it acts or sunbeam or any placemement is commom for all . <br>
-                It Onlu depends on what is your ccee scrore thats it . <br>
-                If your ccee scrore is above 60% Then you will get lots of calls . <br>
-                If Your Score is less than 60% call numbers in first month will be less . <br>  
-                So Main question is how to prepare for ccee exam ? <br>
-                At the end of cdac course you might heard about acts dumps acts will give dumps and all question come only through that dumps . <br>
-                This is a very very worst joke guys there is nothing like dumps its just myths.. <br>
+      <section id="about" class="py-4" style="background-color:#f7f7f7">
+        <div class="container" style="background-color: white;">
+         
+              <h3> <strong>The Final Exam Conducted By Cdac</strong>  </h3>
+            
+              <p style="font-size: 15px;"> 
+                <strong>CCEE</strong> is the exam on which your whole placement is depend
+                no matter in which college you studied whether it acts or sunbeam or any placemement is commom for all
+                it Only depends on what is your ccee scrore that's it. 
+                <br> <br>
+                If your <strong>CCEE</strong>  scrore is above 60% Then you will get lots of calls,
+                if Your Score is less than 60% no of interview calls in first month will be less 
+                So Main question is how to prepare for <strong> ccee exam</strong> 
+                <br> <br>
+                At the end of cdac course you might heard about <strong> acts dumps</strong> acts will give dumps and all question come only through that dumps,
+                this is a very very worst joke guys there is nothing like dumps its just myths.. <br> <br>
                 
             </p>
-             <h4>So How Can I prepare for ccee exam ?</h4>
-             <p class="mt-4">
-                Simple guys ccee is the only objective exam there is no negative marking this is plus point . <br>
-                You have 40 questions and you need to pass 16 must be correct . <br>
-                If you want your score should be above 60% then you need above 25 in each paper atleast . <br>
-                There are 1000 of questions on sandfondry but really its very difficult to read them  . <br>
-                Instead do one thing just read theory concepts very well and slides of the teachers . <br>
-                Questions will not be too much difficult they just expect you know basics very well . <br>
-                So Read theory of each topic wise very very carefully and trust me guys that is more than enough . <br>
+             <h3> <strong>So How Can I prepare for ccee exam</strong> </h3>
+             <p style="font-size: 15px;">
+                Simple  <strong>CCEE</strong> is the only objective exam there is no negative marking this is plus point,
+                you have 40 questions and you need to pass 16 must be correct.
+                If you want your score should be above 60% then you need above 25 in each paper atleast.
+                <br> <br>
+                There are 1000 of questions on <strong>sandfondry</strong>  but really its very difficult to read them
+                instead do one thing just read theory concepts very well and slides of the teachers 
+                questions will not be too much difficult they just expect you know basics very well 
+                So read theory of each topic wise very very carefully and trust me guys that is more than enough . <br> <br>
                
                 
             </p>
-            <h3 style="color:black">Importance Of CCEE Score  : </h3> 
+            <h3> <strong>Importance Of CCEE Score  : </strong> </h3> 
             <p >
-                Hey guys I got lots of enquiries regarding CCEE exam , what this exam and how this exam matter for placement . <br>
-                and how the companies to shortlist the people as per the CCEE score . <br>
-                So I will give the all answers.  Please read all this instructions very very carefully .  <br>
+                I got lots of enquiries regarding <strong>CCEE exam</strong>  , what this exam and how this exam matter for placement 
+                and how the companies to shortlist the people as per the CCEE score
+                So I will give the all answers,Please read all this instructions very very carefully . 
+                <br> <br>
                
-                <br><br>
-                1. If your CCEE score is greater than 60 percentage then you will get maximum amount of  placement calls . <br>
-                2. Even if you have degree score is less than 60 percentage.Maximum Companies will shortlist you as CCEE score only. <br>
-                3. Some of the companies will shortlist as per degree percentage and CCEE Score . <br>
-                4. If you are the 2019 passout and CCEE score is above 60 percentage and your degree Alto above 60 percentage , <br>
-                   then for the dac students they will get daily almost 4 to 5 calls in first month of the Placement. <br>
-                5. Remember guys you have only 30 calls C-DAC will not allow  to seat in placement if you got 30 calls . <br>
-                6. So you have to must to be placed within 30 call .  <br>
-                7. Those students who cross 30 calls they will block for  campus program.  After that there is a local campus program <br>
-                   in that program that students will gets allowed.  <br>
-                8. Local campus is very very worst you will get very less amount of package almost like 2 to 3 LPA Maximum . <br>
-                9. Try to gets placed in first month of the  campus placement then you will get almost minimum 5 lpa package . <br>
-                10. No one will give you all these details guys So please be stay with us always follow our all programs you all guys will gets placed within a month . <br>
-            </p>
-            <h3 style="color:black">Types of Campus In CDAC : </h3> 
-            <p >
-               Campus is divided into three parts : <br>
+               
+                If your <strong>CCEE score </strong> is greater than 60 percentage then you will get maximum amount of  placement calls,
+                Even if you have degree score is less than 60 percentage.Maximum Companies will shortlist you as CCEE score only
+                Some of the companies will shortlist as per degree percentage and CCEE Score . 
+                <br> <br>
+
+                If you are the 2019 passout and <strong>CCEE score </strong> is above 60 percentage and your degree Alto above 60 percentage ,
+                then for the dac students they will get daily almost 4 to 5 calls in first month of the Placement. 
+                Remember you have only 30 calls C-DAC will not allow  to seat in placement if you got 30 calls . <br> <br>
+
+                So you have to must to be placed within 30 calls,
+                those students who cross 30 calls they will block for  campus program.  After that there is a local campus program
+                in that program that students will gets allowed. 
+
+                <br> <br>
+
+               <strong>CDAC Local campus </strong>is very very worst you will get very less amount of package almost like 2 to 3 LPA maximum
+                ,try to gets placed in first month of the  campus placement then you will get almost minimum 5 lpa package
+                 no one will give you all these details , so please be stay with us always follow our all programs you all  will gets placed within a month . <br> <br>
+            </p> <br>
+            <h3> <strong>Types of Campus In CDAC : </strong> </h3> 
+            <p>
+              <strong>Campus is divided into three parts :</strong>  <br>
                1. On Campus (First month of campus) <br>
                2. Off Campus (After On campus ) <br>
                3. Local Campus <br> <br>
-               First on campus which is in the first month of the placement this will be around 1 month . <br>
-               Second  off campu  which will start  after the first month of placement means after the on campus. This campus will be around 1.5 to 2 months . <br>
-               and in this campus  package will start to decrease . <br>
-               And the last one is local campus this campus will go until the next batch. <br>
-               In the local campus you will get very very rare calls like in two three days one or two call that's it . <br>
-               And  package is also very less . <br>
+               First on campus which is in the first month of the placement this will be around 1 month ,
+               Second  off campus  which will start  after the first month of placement means after the on campus. This campus will be around 1.5 to 2 months,
+               and in this campus  package will start to decrease . <br> <br>
+
+               And the last one is local campus this campus will go until the next batch,
+               In the local campus you will get very very rare calls like in two three days one or two call that's it
+               and  package is also very less . <br> <br>
                
+              
+               That's it  these is all detail information about ccee and placements
+               you got  all details before start the cdac . I got this information at the end of cdac . <br>
+               So  you have very good chance to prepare well for <strong>CCEE exam</strong> also you will get very clear guidence from us anytime. <br>
                <br> <br>
-               Thats it guys these is all detail information about ccee and placements . <br>
-               You guys gets this all details before start the cdac . I got this information at the end of cdac . <br>
-               So guys you got very great chance you will get very clear guidence from us . so please tell your friend also to gets registerd with us . <br>
-               <br> <br>
-              </p>
-              <h3 style="color:black">How to get success In C-DAC : </h3> 
-              <p >
-                First and very important thing dont be lazy only 6 month hardwork will decide your future happiness . <br>
-                Ok in each batch there are some oversmart peoples so ignore then first . <br>
-                Because you are doing cdac that means you will gets placed not big deal . <br>
-                But think are you happy with 3 LPA package ? <br>
-                No , Then do some extra hard work promise your self you will never miss questions-of-the-day program . <br>
-                The benefits of that program you will realize after start placement . <br>
-                This is my gurantee if you are able to solve my questions from day 1 to last day you will 100 % crack any technical round . <br>
-                I will not give gurantee about HR that will depend on your communication ,personality etc  . <br>
-                Just be stay with us any doubt help please feel free to contact us . <br>  
-              </p>
-            </div>
-            <h3 style="color:black">All The Best For Your new Journey Start From 20 Aug 2019  : </h3> 
+              </p> <br>
+              <h4> <strong> All the best for your new journey will start feb 2020 :</strong> </h4>
             
+            </div>
+           
+           
+        
+      </section>
+    
+      <section id="about" class="py-4" style="background-color:#f7f7f7">
+        <div class="container" style="background-color: white;">
+          <h4><strong>You may also like :</strong></h4>
+          <div class="col-md-6 col-lg-4 mb-4">
+            <div class="card listing-preview">
+              <div class="card-body">
+                <div class="listing-heading text-center">
+                  <h4><strong>Pre Dac Course</strong></h4>
+                  CDAC ccat free pre dac course 45 days you can check here..<br>
+                  <a href="{% url 'ccat-predac-course-pune' %}">Pre Dac</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4 mb-4">
+            <div class="card listing-preview">
+              <div class="card-body">
+                <div class="listing-heading text-center">
+                  <h4><strong>CDAC C-CAT Syllabus 2019</strong></h4>
+                  CDAC C-CAT Syllabus 2019 - you can check here.. <br>
+                  <a href="{% url 'cdac-c-cat-syllabus' %}">Syllabus</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4 mb-4">
+            <div class="card listing-preview">
+              <div class="card-body">
+                <div class="listing-heading text-center">
+                  <h4><strong> CDAC C-CAT Admit Card 2019 </strong></h4>
+                  CDAC C-CAT Admit Card 2019- The Authorities has released CDAC ... <br>
+                  <a href="{% url 'cdac-c-cat-admit-card' %}">Admit Card </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4 mb-4">
+            <div class="card listing-preview">
+              <div class="card-body">
+                <div class="listing-heading text-center">
+                  <h4><strong>CDAC C-CAT Result 2019</strong></h4>
+                  CDAC C-CAT Result & Rank 2019 - The Centre for Development of... <br>
+                  <a href="{% url 'cdac-c-cat-result' %}">CCAT Result </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4 mb-4">
+            <div class="card listing-preview">
+              <div class="card-body">
+                <div class="listing-heading text-center">
+                  <h4><strong>CDAC C-CAT Cut-Off</strong></h4>
+                  CDAC C-CAT Cut-Off 2019- You can check latest cutoff for CDAC here .. <br>
+                  <a href="{% url 'cdac' %}">Cut-Off</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4 mb-4">
+            <div class="card listing-preview">
+              <div class="card-body">
+                <div class="listing-heading text-center">
+                  <h4><strong>CDAC C-CAT Test Seties</strong></h4>
+                  CDAC C-CAT Mock Test 2019- free 2 mock test for both section.. <br>
+                  <a href="{% url 'onlinetest' %}">Mock Test</a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </section>
-    
-
 
 
 
