--- a/ccatcracker/templates/pages/cdac.html
+++ b/ccatcracker/templates/pages/cdac.html
@@ -1,36 +1,17 @@
 {% extends 'base.html '%}
 
+{% block title %}CDAC C-CAT 2019 - Result (Announced),Cutoff, Counselling, Seat Allotment{% endblock %}
+
 {% block content %}
 
-
-<section id="about" class="py-4" >
-        <div class="container">
-          <div class="row">
-            <div class="col-md-8">
-              <h2>Congrats Guys Hope you got your ccat rank .</h2>
-              <p class="lead">After rank every one start to find which course which center I will get as per my rank.
-                  No Worries guys ccatcracker here just enter your rank and course you will get all list of colleges which
-                  is highest probability to get .
-              </p>
-              
-              <p class="mt-4">If you click CCAT section you will get all material .That notes are created by me 
-                  I have completed CDAC 1 year ago . I saw how much peoples do struggle to get perfect notes unnecessary
-                they wate lots of money for Pre-Dac Course . Thats why i have developed this website only for You Guys.
-                So stay with me and start to explore I always update new Material and Important Tips for how to success in CDAC.           </p>
-            </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section id="showcase" style="background-image: url(../static/img/cdac.jpg);background-repeat: no-repeat;background-attachment: fixed;">
-            <div class="container text-center">
+<section id="about" class="py-4" style="background-color:#f7f7f7">
+  <div class="container" style="background-color:black;">
+             
               <div class="home-search p-5">
                 <div class="overlay p-5">
-                  <h1 class="display-4 mb-4">
-                    Search Centers Rank Wise
-                  </h1>
+                  <h3 style="color: white;" > <strong>CDAC C-CAT 2019 Cut Off</strong></h3>
                 
-                  <p class="lead">Please enter course name and your Rank to get list of cdac center</p>
+                  <p style="color: white;" >Please enter course name and your Rank to get list of cdac center</p>
                   <div class="search">
                     <form action="{% url 'rank' %}">
                       <!-- Form Row 1 -->
@@ -51,7 +32,7 @@
                         <div class="col-md-6 mb-3">
                           <label class="sr-only">City</label>
                           <select name="rank" class="form-control">
-                            <option selected="true" disabled="disabled">Rank <</option>
+                            <option selected="true" disabled="disabled">Rank > </option>
                             <option value="500">500</option>
                             <option value="1000">1000</option>
                             <option value="1500">1500</option>
@@ -74,8 +55,123 @@
             </div>
           </section>
 
+          <section id="about" class="py-4" style="background-color:#f7f7f7">
+            <div class="container" style="background-color: white;">
+             
+                  <h3> <strong>How to Check CDAC C-CAT 2019 Cut Off</strong></h3>
+                  <br> <br>
+                  <p style="font-size: 17px;">
+                  After <strong>CCAT Result</strong> every one starts to find which course, which center I will get as per my rank.
+                  Here I am providing roughly best prediction of cut off as per last batch . <strong>CDAC C-CAT Cutoff</strong> will always change each year after each branch but changes are very
+                  normal . So whatever guess I provided here is 80% accurate as per this you will get same colleges  .  <br> <br>
 
+                  You can enter course name and your rank greater than value you will get Maximum probability college list that you will get as per your rank.  <br>                   For Ex . your rank is 1200 then you can select Your Rank > 1000
+              
+                  Rank range on website is in 500 range - Ex . 500,1000,1500 etc. <br>
+                    <br>
+                  <strong>How to check for my rank 600 ?</strong> <br>
+                  <br>
+                  Here read carefully if lets say my rank is 600 and i want to check cutoff for dac course with my rank so i will select DAC 
+                  then i will select your rank > option 500 and do a search then you will get all the college list as per your rank. <br><br>
 
+                  Please consider 200,300 rank difference in real means if website says for you rank lets say 1200  you will not get sunbeam pune but sometimes it may be 
+                  possible you can get sunbeam pune for 1200 rank also . So just keep 200,300 rank difference for better result . <br>
 
-{% endblock %}
+                  </p>
+                  <br> <br>
+                  <h3><strong>CDAC C-CAT Counselling and seat allocation 2019</strong></h3> <br>
+                  <p style="font-size: 17px;">
+                  After the declaration of CDAC C-CAT result, it is being followed by the counselling process. The counselling of <strong>CDAC CCAT 2019 </strong> is being conducted in online mode only wherein candidates need their form number and password to lock their choices of courses and training centres. Candidates are being allocated seats strictly according to the order of their preferences and ranks. A candidate who does not get his/ her first preference can try again for the next round of CDAC C-CAT counselling 2019. However, a candidate cannot opt for a lower preferred choice if he/ she bags the higher preference in any round of <strong>CDAC C-CAT 2019 counselling</strong> .
+              <br> <br>
+              Candidates will selected on the basis of the ranks based on their performances in Section A, Sections A+B, Sections A+B+C of <strong>C-CAT exam</strong> . After online choice filling form of their preferences of course and training centre, there will be two counselling process and three seat allotment rounds.
+              <br> <br>
+              <h4><strong>First Counselling</strong></h4>
+              <p style="font-size: 17px;">
+             <br> <br>   In first counselling according the ranks candidates will be allocated seats in the order of rank and preferences of courses and centres. Two rounds of seat allocations based on thefirst counselling will be done
+             <br> <br>   If the candidate do not have good enough ranks they might not get top preferences course or centres.
+             <br> <br>   However, the seats allotted in the first preference and in the first round to the candidates will be their final allocated seat and there will be no change for them in the second round of seat allocations. And the seats allocated in the second round will be the final allocated and there will be no further change in them.
+
+              </p>
+              <br>
+              <h4><strong>Second Counselling</strong></h4> <br>
+              <p style="font-size: 17px;">
+                In the second counselling, candidates who have not got admission or have not allotted seats have to fill the online choice for the vacant seats in the centres and courses. The second counselling will be scheduled after the payment of the first installment fee of the second round of seat allocation. The third round of seat allocation is based on the second counseling.
+              </p> <br> 
+              <h4><strong>Seat Allotment Result</strong></h4>
+              <br>
+             <p style="font-size: 17px;;"> In the both the counselling, CDAC will released the result in the candidates login for the seat allotted to the candidates. Candidates can check the result and the seat allotted to them by logging in with Form number and Password. The decision made by the CDAC and the seats allotted to the candidates in all the rounds are the final seats allotted to them, after that no changes can be made further. After the allocation of seats, candidates have to pay the course fee either in installments or full, online on the official website.
+            </p>
+             <br> <br> <br>
+                <h4><strong>Realated to CDAC </strong></h4> <br>
+                <div class="col-md-6 col-lg-4 mb-4">
+                  <div class="card listing-preview">
+                    <div class="card-body">
+                      <div class="listing-heading text-center">
+                        <h4><strong>Pre Dac Course</strong></h4>
+                        CDAC ccat free pre dac course 45 days you can check here..<br>
+                        <a href="{% url 'ccat-predac-course-pune' %}">Pre Dac</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-6 col-lg-4 mb-4">
+                  <div class="card listing-preview">
+                    <div class="card-body">
+                      <div class="listing-heading text-center">
+                        <h4><strong>CDAC C-CAT Syllabus 2019</strong></h4>
+                        CDAC C-CAT Syllabus 2019 - you can check here.. <br>
+                        <a href="{% url 'cdac-c-cat-syllabus' %}">Syllabus</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-6 col-lg-4 mb-4">
+                  <div class="card listing-preview">
+                    <div class="card-body">
+                      <div class="listing-heading text-center">
+                        <h4><strong> CDAC C-CAT Admit Card 2019 </strong></h4>
+                        CDAC C-CAT Admit Card 2019- The Authorities has released CDAC ... <br>
+                        <a href="{% url 'cdac-c-cat-admit-card' %}">Admit Card </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-6 col-lg-4 mb-4">
+                  <div class="card listing-preview">
+                    <div class="card-body">
+                      <div class="listing-heading text-center">
+                        <h4><strong>CDAC C-CAT Result 2019</strong></h4>
+                        CDAC C-CAT Result & Rank 2019 - The Centre for Development of... <br>
+                        <a href="{% url 'cdac-c-cat-result' %}">CCAT Result </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-6 col-lg-4 mb-4">
+                  <div class="card listing-preview">
+                    <div class="card-body">
+                      <div class="listing-heading text-center">
+                        <h4><strong>CDAC C-CAT Cut-Off</strong></h4>
+                        CDAC C-CAT Cut-Off 2019- You can check latest cutoff for CDAC here .. <br>
+                        <a href="{% url 'cdac' %}">Cut-Off</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-6 col-lg-4 mb-4">
+                  <div class="card listing-preview">
+                    <div class="card-body">
+                      <div class="listing-heading text-center">
+                        <h4><strong>CDAC C-CAT Test Seties</strong></h4>
+                        CDAC C-CAT Mock Test 2019- free 2 mock test for both section.. <br>
+                        <a href="{% url 'onlinetest' %}">Mock Test</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </section>
+            <br> <br>
+
+              {% endblock %}
 
