--- a/ccatcracker/templates/pages/course.html
+++ b/ccatcracker/templates/pages/course.html
@@ -165,7 +165,7 @@
               <br>
               <br>
               <h4 style="color: green">So lets start your ccat journey with us click below :  </h4> <br>
-            <a style="margin-left: 30%"  href="{% url 'C-CAT-2019-Predac-Course' %}" class="btn btn-secondary text-white btn-lg">C-CAT-Course</a><br> <br>
+            <a style="margin-left: 30%"  href="{% url 'ccat-predac-course-pune' %}" class="btn btn-secondary text-white btn-lg">C-CAT-Course</a><br> <br>
             
          </div>
       </div>
