--- a/ccatcracker/templates/pages/syllabus.html
+++ b/ccatcracker/templates/pages/syllabus.html
@@ -33,18 +33,18 @@
 					<a href="{% url 'index' %}">
 					<i class="fas fa-home"></i> Home</a>
 				</li>
-				<li class="breadcrumb-item active">CDAC C-CAT Course</li>
+				<li class="breadcrumb-item active">CDAC C-CAT Syllabus</li>
 			</ol>
 		</nav>
 	</div>
 </section>
 <section id="about" class="py-4" style="background-color:#f7f7f7">
 	<div class="container" style="background-color: white;">
-		<h3> <strong>CDAC C-CAT Pre Dac Course ccatcracker</strong>  </h3>
+		<h3> <strong>CDAC C-CAT Syllabus 2020</strong>  </h3>
 		<br> <br>
 		<p style="font-size: 17px;"> 
         
-           <strong> CDAC C-CAT  </strong> The Centre for Development of Advanced Computing (CDAC) determines the Common Admission Test (C-CAT) 2019 syllabus. All the subjects and topics which are covered in the exam are mentioned in the CDAC CCAT syllabus 2019. The syllabus of CDAC C-CAT 2019 differs for various PG diploma courses. Since the CDAC 2019 was conducted on December 8 and 15, 2019, it is essential for candidates to be well versed with the CDAC CCAT 2019 syllabus so that their preparation can be completed on time. Knowing the CDAC C-CAT syllabus 2019 allows candidates to prepare efficiently and prevent wasting their time on insignificant topics. Along with the syllabus, the reference books for various subjects are given below for the candidates’ convenience. Scroll down the article below to know more about the syllabus of CDAC C-CAT 2019.
+           <strong> CDAC C-CAT Syllabus 2020 </strong> The Centre for Development of Advanced Computing (CDAC) determines the Common Admission Test (C-CAT) 2019 syllabus. All the subjects and topics which are covered in the exam are mentioned in the CDAC CCAT syllabus 2019. The syllabus of CDAC C-CAT 2019 differs for various PG diploma courses. Since the CDAC 2019 was conducted on December 8 and 15, 2019, it is essential for candidates to be well versed with the CDAC CCAT 2019 syllabus so that their preparation can be completed on time. Knowing the CDAC C-CAT syllabus 2019 allows candidates to prepare efficiently and prevent wasting their time on insignificant topics. Along with the syllabus, the reference books for various subjects are given below for the candidates’ convenience. Scroll down the article below to know more about the syllabus of CDAC C-CAT 2019.
 
         </p>
 		<br>
@@ -71,82 +71,9 @@
 		<br> <br>
 		<h5><Strong>Detail Syllabus For CCAT 2020 </Strong></h5>
 		<br>
-    <a href="{% url 'ccat_notify' %}">CCAT 2020 Syllabus</a> <br> <br>
-    
-    <h4><strong>Free Pre Dac Course 45 Days</strong></h4> 
-      <br>
-     
-    <p style="font-size: 17px;">
-    
+		<a href="{% url 'ccat_notify' %}">CCAT 2020 Syllabus</a> <br> <br>
 
-    First question comes in mind is why should i join this <strong>course why not private</strong>  and how can i trust your 
-    course will it give me a good rank  or not ? 
-   <br > <br>
-    So , I will tell why you should join ccatcracker course
-    see, ccat exam is not too much difficult so it doesnt make any sense that you are 
-    investing 12,15k for <strong>pre cat 40 days private course </strong> .
-    Believe me or not ask anyone who completed pre dac course is he/ she able to solve <strong>C++ coding question</strong> 
-    or they are able to solve some <strong> data Structure problems ?</strong> .
-    You can ask by your self I will tell 70 % student dont know even <strong> C  & C++ basic</strong> but they will get a 
-    good rank just because may they have good command on english and apti or may be luck . <br> <br>
-
-    But while doing <strong>CDAC how much they face problem</strong>  that you will know while doing cdac  .
-    And why you dont want self study if anyone tells you start study then only you will learn lots of new things by self study
-    if you think just by join any private pre dac course  you will get great success in <strong>CDAC placement</strong>  then you are wrong . 
-  
-    I have completed CDAC i know that what issues we face that's why I developed these free website . <br>
-    <br>
-    Now if you do our course you can able to solve <strong>C,Data Structure,C++ programming</strong>  that much we have covered 
-    from very basic to advance .
-    My goal is not only get success in ccat exam I want whoever follow <strong>ccatcracker course</strong>  will get placed within 
-    with good package and in good company . 
-    And that's why i have coverd too much syllabus which will make you very strong and confident while doing CDAC . 
-    <br> <br>
-    This are the benefits of <strong>ccatcracker course</strong> you can learn with your own speed its not mandatory you have to finish it in 45 days 
-    if you not able to understand any concept watch video twice that you cannot do in private classes . <br>
-
-  </p>
-  <br> <br>
-  <h3><strong>Lets Start Course Read Instruction </strong></h3> <br>
-  <p style="font-size: 17px;;">
-    I have divided whole course in 45 days So please start from day 1,
-    don't miss any single lecture videos just think like you have paid 12k , and you are 
-    doing pre dac course from private institue. <br> <br>
-   
-    Fix your daily target of 6 hrs same like any coaching center .
-    
-    After complete each day , then solve my assignments before start next day you must have to finish assignments on the same day .  
-    If you follow all these instructions honsetly for 45 days you will achieve very very great rank  in ccat exam .
-    Take holiday only on <strong>sunday</strong>  then again mon-sat concentrate on your course .
-    <br> <br>
-  
-  </p>
-
-  <h4><strong> C Language (Day 1 -  Day 15) </strong></h4>
-  <br>
-  <a  href="{% url 'intro' %}">C Language Tutorial</a><br> 
-  <br> <br>
-  <h4> <strong> C++ Language (Day 16 -  Day 26)</strong></h4> <br>
-
-  <a  href="{% url 'cpp' %}">C++ Language Tutorials</a><br> <br>
-  
-  <h4> <strong> Data Structure (Day 27 -  Day 31)</strong></h4> <br>
-
-  <a  href="{% url 'Data-Structure-Tutorial' %}" >Data Structure Tutorials</a><br> <br>
-
-  <h4> <strong> Operating System (Day 32 -  Day 34)</strong></h4> <br>
-
-  <a  href="{% url 'OS-Tutorial' %}" >Opearating System Tutorials</a><br> <br>
-
-  <h4><strong> Networking  (Day 35-  Day 36)</strong></h4> <br>
-
-  <a   href="{% url 'Networking-Tutorials' %}" >Networking Tutorials</a><br> <br>
-  
-  <h4> <strong>English & Aptitude (Day 37 - Day 45)</strong> </h4> <br>
-
-  <a  href="{% url 'English-Tutorial' %}" >English & Aptitude </a><br> <br>
-  <br> <br>
-       
+        
 	</div>
 </section>
 <section id="about" class="py-4" style="background-color:#f7f7f7">
