--- a/ccatcracker/templates/base.html
+++ b/ccatcracker/templates/base.html
@@ -16,6 +16,9 @@
   <!--Lightbox-->
   <link rel="stylesheet" href="{% static 'css/lightbox.min.css' %}">
 
+<meta name="Description" content=" Established in March 1988, as a Scientific Society of the Department of Information Technology, Ministry of Communications and Information Technology, Government of India. C-DAC, is primarily an R and D institution involved in the design, development and deployment of advanced Information Technology (IT) based solutions such as Super Computers, Financial and Capital market simulation and modeling, Network and Internet Software, Healthcare, Real Time Systems, eGovernance, Data Warehousing, Digital library, Artificial Intelligence and Natural language processing and so on..."/>
+<meta name="KeyWords" content="acts,advance,bioinformatics,cdac,centre,computational,computers,computing,development"/>
+
 
   <title>{% block title %}{% endblock %}</title>
   <body>
