--- a/ccatcracker/templates/partials/_footbar.html
+++ b/ccatcracker/templates/partials/_footbar.html
@@ -4,7 +4,7 @@
   
   <footer id="main-footer" class="py-4 bg-primary text-white text-center">
     Copyright &copy;
-    <span class="year"></span> ccatcracker.com
+    <span class="year"></span> ccatcracker.in
     <section id="footer">
         <div class="container">
           <div class="row text-center text-xs-center text-sm-left text-md-left">
